force-app/main/default/objects/ssot__Complaint__dlm/fields/ssot__BusinessName__c.field-meta.xml
<CustomField>
    <fullName>ssot__BusinessName__c</fullName>
    <label>Business Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BusinessName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>