force-app/main/default/objects/ssot__Complaint__dlm/fields/ssot__CompensationAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CompensationAmount__c</fullName>
    <label>Compensation Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CompensationAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>