force-app/main/default/objects/ssot__Complaint__dlm/fields/ssot__Complaint_PartyId_map_Party_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__Complaint_PartyId_map_Party_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complaint_PartyId_map_Party_Id_N_1</label>
    <referenceTo>ssot__Party__dlm</referenceTo>
    <relationshipLabel>Complaint_PartyId_map_Party_Id_N_1</relationshipLabel>
    <relationshipName>Complaint_PartyId_map_Party_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>