force-app/main/default/objects/ssot__Complaint__dlm/fields/ssot__ComplaintPriority__c.field-meta.xml
<CustomField>
    <fullName>ssot__ComplaintPriority__c</fullName>
    <label>Complaint Priority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ComplaintPriority</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>