force-app/main/default/objects/ssot__Complaint__dlm/fields/ssot__ComplaintProductType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ComplaintProductType__c</fullName>
    <label>Complaint Product Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ComplaintProductType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>