force-app/main/default/objects/ssot__Complaint__dlm/fields/ssot__ComplaintReporterCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ComplaintReporterCategory__c</fullName>
    <label>Complaint Reporter Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ComplaintReporterCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>