force-app/main/default/objects/ssot__Complaint__dlm/fields/ssot__ComplaintSourceType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ComplaintSourceType__c</fullName>
    <label>Complaint Source Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ComplaintSourceType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>