force-app/main/default/objects/ssot__Complaint__dlm/fields/ssot__ComplaintStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ComplaintStatus__c</fullName>
    <label>Complaint Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ComplaintStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>