force-app/main/default/objects/ssot__Complaint__dlm/fields/ssot__ComplaintSubType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ComplaintSubType__c</fullName>
    <label>Complaint Sub Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ComplaintSubType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>