force-app/main/default/objects/ssot__Complaint__dlm/fields/ssot__CompliantCauseSubtype__c.field-meta.xml
<CustomField>
    <fullName>ssot__CompliantCauseSubtype__c</fullName>
    <label>Complaint Cause Sub Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CompliantCauseSubtype</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>