force-app/main/default/objects/ssot__Complaint__dlm/fields/ssot__IsComplainantAuthorized__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsComplainantAuthorized__c</fullName>
    <label>Is Complainant Authorized</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsComplainantAuthorized</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>