force-app/main/default/objects/ssot__Complaint__dlm/fields/ssot__MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MobileNumber__c</fullName>
    <label>Mobile Number</label>
    <length>40</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MobileNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>