force-app/main/default/objects/ssot__Complaint__dlm/fields/ssot__ShouldInclInRegulatoryRpt__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShouldInclInRegulatoryRpt__c</fullName>
    <label>Should Include In Regulatory Report</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShouldInclInRegulatoryRpt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>